# clippinator

./: .env.example  README.md  coding_agents_crew.py  coding_agents_flow.yaml  fix_langchain_imports.sh  fix_root_langchain_imports.sh  pyproject.toml  pyyaml-6.0.2-cp311-cp311-linux_aarch64.whl
clippinator/: __main__.py
clippinator/llms/: llama_cli_llm.py
clippinator/minions/: base_minion.py  executioner.py  prompts.py  specialized_minions.yaml  taskmaster.py
clippinator/project/: project.py  project_summary.py
clippinator/tools/: __init__.py  code_tools.py  file_tools.py  simple_web_browser.py  terminal.py  utils.py
clippinator/utils/: monitoring.py
clippinator_crewai/: main_crew_runner.py
clippinator_crewai/agents/: architecture_agents.py  coding_agents.py  planning_agents.py  qa_agents.py
clippinator_crewai/tasks/: architecture_tasks.py  coding_tasks.py  planning_tasks.py  qa_tasks.py
clippinator_crewai/tools/: command_tools.py  file_io_tools.py  project_tools.py
iqone/: .clippinator.pkl
src/architect/config/: agents.yaml
src/codewriter/config/: agents.yaml
src/planner/config/: agents.yaml
src/shared_tools/: __init__.py  command_tools.py  file_io_tools.py  project_tools.py
src/tester/config/: agents.yaml
test_dummy_project/: .clippinator.pkl
tests/: test_agent_validation.py  test_base_minion.py  test_project.py  test_prompts.py  test_taskmaster.py
